--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
 body {
-    background-color: white;
+    background-color: black;
 }
 
-/*________________Header____________________*/
 
+/*________________Header____________________*/
 
 
 /*_________________Nav______________________*/
 
 
-
 /*_________________Main_____________________*/
 
 
-
 /*________________Footer____________________*/
-
