--- a/style.css
+++ b/style.css
@@ -1,18 +1,80 @@
 body {
-    background-color: white;
+    background-color: black;
+    font-family: 'Ropa Sans', sans-serif;
 }
+
 
 /*________________Header____________________*/
 
+header {
+    display: flex;
+    align-items: flex-end;
+    width: auto;
+    height: 15%;
+    background-color: red;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.logo {}
 
 
 /*_________________Nav______________________*/
 
+nav {
+    width: auto;
+    height: 15%;
+    display: flex;
+    background-color: yellow;
+}
+
+ul {
+    display: flex;
+    color: white;
+    background-color: teal;
+}
+
+li {
+    margin-left: 5em;
+    font-size: 1.5em;
+}
 
 
 /*_________________Main_____________________*/
 
+main {
+    border: solid 3px white;
+    width: 100%;
+    height: 500px;
+    background-color: white;
+}
 
 
 /*________________Footer____________________*/
 
+.icons {
+    width: 60px;
+}
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
+    background-color: blueviolet;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.iconcontainer {
+    width: 30%;
+    display: flex;
+    justify-content: space-around;
+}
