--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
     body {
-        background-color: black;
         font-family: 'Ropa Sans', sans-serif;
     }
     /*________________Header____________________*/
     
     header {
+        position: absolute;
+        align-items: center;
+        z-index: 2;
         display: flex;
-        align-items: flex-end;
         width: auto;
         height: 15%;
-        background-color: red;
     }
     
     a {
@@ -17,20 +17,17 @@
         color: white;
     }
     
-    .logo {}
     /*_________________Nav______________________*/
     
     nav {
         width: auto;
         height: 15%;
         display: flex;
-        background-color: yellow;
     }
     
     ul {
         display: flex;
         color: white;
-        background-color: teal;
     }
     
     li {
@@ -40,9 +37,10 @@
     /*_________________Main_____________________*/
     
     main {
-        border: solid 3px white;
+        position: absolute;
+        z-index: 1;
         width: 100%;
-        height: 500px;
-        background-color: white;
+        height: 50%;
+        background-image: url("/public/main.jpg");
     }
     /*________________Footer____________________*/
