--- a/style.css
+++ b/style.css
@@ -1,18 +1,73 @@
 body {
-    background-color: white;
+    background-color: black;
+    font-family: 'Ropa Sans', sans-serif;
 }
 
 /*________________Header____________________*/
 
-
+header {
+    position: absolute;
+    z-index:2;
+    display: flex;
+    align-items: center;
+    width: auto;
+    height: 15%;
+}
 
 /*_________________Nav______________________*/
 
+nav {
 
+    width: auto;
+    height: 15%;
+    display: flex;
+}
 
+ul {
+    display: flex;
+    color: white;
+ }
+
+ li {
+    font-size: 1.5em;
+    text-transform: uppercase;
+     margin-left: 5em;
+ }
 /*_________________Main_____________________*/
 
-
-
+main {
+    position: absolute;
+    height: 50%;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-image: url("../public/main.jpg");
+}
 /*________________Footer____________________*/
 
+.icons{
+    width: 60px;
+   
+    
+}
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+footer{
+    position: relative;
+    z-index: 3;
+    margin-top: auto;
+    background-color: white;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.iconcontainer{
+    width: 30%;
+    display: flex;
+    justify-content: space-around;
+    
+}
