--- a/footer.css
+++ b/footer.css
@@ -8,7 +8,7 @@ body{
 }
 footer{
     margin-top: auto;
-    background-color: blueviolet;
+    background-color: white;
     padding: 10px;
     display: flex;
     justify-content: center;
