--- a/style.css
+++ b/style.css
@@ -4,15 +4,33 @@
    }
    /*_________________Main_____________________*/
    
-   main {
-       position: absolute;
-       z-index: 1;
-       width: 100%;
-       height: 50%;
-       background-image: url("/public/main.jpg");
-   }
-   
    a {
        text-decoration: none;
        color: white;
+   }
+   
+   img {
+       border-width: 0px;
+       border: 0px;
+       padding-bottom: 0px;
+   }
+   
+   #aboutMain {
+       margin-top: 150px;
+       width: 100vw;
+       height: 50vw;
+       border: 1px blue dotted;
+   }
+   
+   #aboutP {
+       color: white;
+       width: 100vw;
+       height: 50vw;
+   }
+   
+   .aboutDiv {
+       display: flex;
+       flex: row;
+       color: white;
+       border: 1px red dotted;
    }
