--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,4 @@
-*{
-    box-sizing: border-box;
-}
+
 .imgSlider{
     width: 100%;
     
@@ -13,6 +11,7 @@ div#slider {
 }
 #slider figure {
     position: relative; 
+    z-index: 1;
     width: 500%;
     margin: 0;
     padding: 0;
@@ -37,7 +36,7 @@ div#slider {
     50% { left: -200%; }
     70% { left: -200%; }
     75% { left: -300%; }
-    95% { left: -300%; }
+    90% { left: -300%; }
     100% { left: -400%; }
   }
   div#slider figure {
@@ -50,3 +49,14 @@ div#slider {
     text-align: left;
     animation: 25s slidy infinite;
   }  
+  .bloc-container {
+    display: grid;
+    text-align: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    margin-top: 10px;
+  }
+  .block{
+      width: 100%;
+      height: 100%;
+  }
