--- a/contact.css
+++ b/contact.css
@@ -1,11 +1,72 @@
 .bg-contact{
     background-image: url('./photos/camera_picture.jpg');
     position: absolute;
-    z-index: 0;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-footer{
-    z-index: 1;
+#contact_form{
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    /*border: 1px solid red;*/
+    
+}
+
+.section-inputs{
+    height: 70%;
+    display: flex;
+    /*border: 1px solid blue;*/
+    justify-content: center;
+    padding-top: 30px;
+    margin-top: 30px;
+}
+
+.section-form{
+    /*border: 1px solid green;*/
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.input_form{
+    margin: 20px;
+    width: 70%;
+    padding: 15px;
+    margin-left: 50px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 5px;
+}
+
+.textarea{
+    height: 200px;
+}
+
+.button-form{
+    width: 150px;
+    padding: 15px;
+    background-color: black;
+    border: 0;
+    color: white;
+    border-radius: 5px;
+}
+
+.contact-button{
+    /*border: 1px solid yellow;*/
+    display: flex;
+    justify-content: center;
+}
+
+.required{
+    display: flex;
+    justify-content: flex-end;
+    color: grey;
+    font-style: italic;
+    font-size: 20px;
+    margin-right: 100px;
 }
