--- a/contact.css
+++ b/contact.css
@@ -1,5 +1,6 @@
 .bg-contact{
-    background-image: url('./photos/camera_picture.jpg');
+    background-image: url('./public/building-1089861_1920.jpg');
+    background-repeat: no-repeat;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -68,5 +69,5 @@
     color: grey;
     font-style: italic;
     font-size: 20px;
-    margin-right: 100px;
+    margin-right: 200px;
 }
