--- a/about.css
+++ b/about.css
@@ -8,9 +8,9 @@
    }
    
    .texte {
-       width: 49%;
+       width: 50%;
        height: 400px;
-       border: 1px red dotted;
+       /*border: 1px red dotted;*/
    }
    
    #pres {
@@ -21,5 +21,5 @@
    
    .aboutpict {
        text-align: center;
-       width: 33%;
+       width: 33.33%;
    }
