--- a/portfolio.css
+++ b/portfolio.css
@@ -1,14 +1,10 @@
 
 .imgSlider{
     width: 100%;
+    height: 100px;
     
 }
 
-div#slider { 
-    width: 100%; 
-    max-width: 2000px;
-    height: 630px; 
-}
 #slider figure {
     position: relative; 
     z-index: 1;
@@ -26,7 +22,9 @@ div#slider {
 div#slider { 
     width: 100%; 
     max-width: 2000px; 
-    overflow: hidden 
+    overflow: hidden;
+
+   
 }
 @keyframes slidy {
     0% { left: 0%; }
@@ -47,16 +45,28 @@ div#slider {
     font-size: 0;
     left: 0;
     text-align: left;
-    animation: 25s slidy infinite;
+    animation: 25s slidy infinite alternate;
   }  
   .bloc-container {
     display: grid;
     text-align: center;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns:1fr 1fr 1fr;
     grid-gap: 10px;
-    margin-top: 10px;
+    padding-top:1vh;
+    padding-bottom: 0px;
+   
   }
+ 
   .block{
       width: 100%;
       height: 100%;
+      
   }
+  /*@media screen and (min-width: 768px) and (max-width: 992px) {
+    .block {
+        width: 100%;
+    }
+ }*/
+
+ 
+ 
