--- a/about.css
+++ b/about.css
@@ -1,25 +1,52 @@
-   .aboutDiv {
-       display: flex;
-       flex-wrap: wrap;
-   }
-   
-   #portrait {
-       width: 50%;
-   }
-   
-   .texte {
-       width: 49%;
-       height: 400px;
-       border: 1px red dotted;
-   }
-   
-   #pres {
-       color: white;
-       font-size: 2em;
-       text-align: left;
-   }
-   
-   .aboutpict {
-       text-align: center;
-       width: 33%;
-   }
+.bloc-container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    border: 2px solid red;
+    width: 100%;
+    height: 93vh;
+}
+
+.bloc-container>div {
+    border: 1px solid #ffa94d;
+    background-color: #ffd8a8;
+    color: #d9480f;
+}
+
+.bloc-container div:nth-child(1) {
+    grid-column: 1 / 4;
+    grid-row: 1 / 5;
+}
+
+.bloc-container div:nth-child(2) {
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+}
+
+.bloc-container div:nth-child(3) {
+    grid-column: 4 / 6;
+    grid-row: 3 / 5;
+}
+
+.bloc-container div:nth-child(4) {
+    grid-column: 6 / 7;
+    grid-row: 3 / 4;
+}
+
+.bloc-container div:nth-child(5) {
+    grid-column: 6 / 7;
+    grid-row: 4 / 5;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+p {
+    color: white;
+    font-size: x-large;
+    text-align: justify;
+    line-height: 5vh;
+    padding: 6% 4% 4% 4%;
+}
