--- a/about.css
+++ b/about.css
@@ -1,16 +1,12 @@
+main {
+    background-color: white;
+}
+
 .bloc-container {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    border: 2px solid red;
-    width: 100%;
     height: 93vh;
-}
-
-.bloc-container>div {
-    border: 1px solid #ffa94d;
-    background-color: #ffd8a8;
-    color: #d9480f;
 }
 
 .bloc-container div:nth-child(1) {
@@ -21,6 +17,7 @@
 .bloc-container div:nth-child(2) {
     grid-column: 4 / 7;
     grid-row: 1 / 3;
+    background-color: black;
 }
 
 .bloc-container div:nth-child(3) {
@@ -38,9 +35,9 @@
     grid-row: 4 / 5;
 }
 
-img {
-    max-width: 100%;
-    max-height: 100%;
+main div img {
+    width: 100%;
+    height: 100%;
 }
 
 p {
@@ -48,5 +45,5 @@ p {
     font-size: x-large;
     text-align: justify;
     line-height: 5vh;
-    padding: 6% 4% 4% 4%;
+    padding: 9% 4% 4% 4%;
 }
