--- a/about.css
+++ b/about.css
@@ -9,26 +9,48 @@ main {
     height: 93vh;
 }
 
+
+/* PORTRAIT */
+
 .bloc-container div:nth-child(1) {
     grid-column: 1 / 4;
     grid-row: 1 / 5;
 }
 
+
+/* TEXTE */
+
 .bloc-container div:nth-child(2) {
     grid-column: 4 / 7;
     grid-row: 1 / 3;
     background-color: black;
+    text-align: justify;
+    writing-mode: horizontal-tb;
+    color: white;
+    font-size: x-large;
+    line-height: 4vh;
+    padding: 10% 4% 4% 4%;
+    text-overflow: ellipsis;
 }
+
+
+/* PHOTO 1 */
 
 .bloc-container div:nth-child(3) {
     grid-column: 4 / 6;
     grid-row: 3 / 5;
 }
 
+
+/* PHOTO 2 */
+
 .bloc-container div:nth-child(4) {
     grid-column: 6 / 7;
     grid-row: 3 / 4;
 }
+
+
+/* PHOTO 3 */
 
 .bloc-container div:nth-child(5) {
     grid-column: 6 / 7;
@@ -40,10 +62,18 @@ main div img {
     height: 100%;
 }
 
-p {
-    color: white;
-    font-size: x-large;
-    text-align: justify;
-    line-height: 5vh;
-    padding: 9% 4% 4% 4%;
+p {}
+
+@media screen and (min-width: 200px) and (max-width: 740px) {
+    .bloc-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    p {
+        color: white;
+        font-size: larger;
+        text-align: justify;
+        line-height: 3vh;
+        padding: 3%;
+    }
 }
