ajout photo portfolio

--- a/footer.css
+++ b/footer.css
@@ -29,3 +29,9 @@ footer{
     justify-content: space-around;
     
 }
+@media screen and (min-width: 360px) and (max-width: 740px) {
+  footer{
+      position: fixed;
+      bottom: 0px;
+      width: 100 vw;
+  }
