--- a/about.css
+++ b/about.css
@@ -7,6 +7,7 @@ main {
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(4, 1fr);
     height: 93vh;
+    object-fit: cover;
 }
 
 
@@ -62,8 +63,6 @@ main div img {
     height: 100%;
 }
 
-p {}
-
 @media screen and (min-width: 200px) and (max-width: 740px) {
     .bloc-container {
         display: flex;
@@ -71,7 +70,7 @@ p {}
     }
     p {
         color: white;
-        font-size: larger;
+        font-size: 0.8em;
         text-align: justify;
         line-height: 3vh;
         padding: 3%;
