--- a/about.css
+++ b/about.css
@@ -7,6 +7,9 @@ main {
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(4, 1fr);
     height: 93vh;
+}
+
+.bloc-container img {
     object-fit: cover;
 }
 
