--- a/portfolio.css
+++ b/portfolio.css
@@ -58,7 +58,7 @@ div#slider {
     text-align: center;
     grid-template-columns:1fr 1fr 1fr;
     grid-gap: 10px;
-    padding-top:1vh;
+    padding-top: 1vh;
     padding-bottom: 0px;
    
   }
@@ -67,7 +67,14 @@ div#slider {
       width: 100%;
       height: 100%;
       
+        
   }
+ .block:hover{
+     transform: scale(1.01);
+     transition: 1s;
+ }
+
+
   @media screen and (min-width: 360px) and (max-width: 740px) {
     .bloc-container{
         display: grid;
