add @media screen on text about

--- a/header.css
+++ b/header.css
@@ -1,30 +1,33 @@
 /*________________Header____________________*/
 
-header{
+header {
     position: absolute;
-    z-index:2;
+    z-index: 2;
     display: flex;
     align-items: center;
     width: auto;
     height: 15%;
 }
 
+
 /*_________________Nav______________________*/
 
-nav{
-
+nav {
     width: auto;
     height: 15%;
     display: flex;
 }
 
-ul{
+ul {
     display: flex;
     color: white;
- }
+}
 
- li{
+li {
     font-size: 1.5em;
     text-transform: uppercase;
-     margin-left: 5em;
- }
+    margin-left: 5em;
+}
+
+
+/*_________________Nav responsive______________________*/
