--- a/about.css
+++ b/about.css
@@ -2,80 +2,75 @@ main {
     background-color: white;
 }
 
-.bloc-container {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    height: 93vh;
-}
-
-.bloc-container img {
-    object-fit: cover;
-}
-
-
-/* PORTRAIT */
-
-.bloc-container div:nth-child(1) {
-    grid-column: 1 / 4;
-    grid-row: 1 / 5;
-}
-
-
-/* TEXTE */
-
-.bloc-container div:nth-child(2) {
-    grid-column: 4 / 7;
-    grid-row: 1 / 3;
-    background-color: black;
-    text-align: justify;
-    writing-mode: horizontal-tb;
-    color: white;
-    font-size: x-large;
-    line-height: 4vh;
-    padding: 10% 4% 4% 4%;
-    text-overflow: ellipsis;
-}
-
-
-/* PHOTO 1 */
-
-.bloc-container div:nth-child(3) {
-    grid-column: 4 / 6;
-    grid-row: 3 / 5;
-}
-
-
-/* PHOTO 2 */
-
-.bloc-container div:nth-child(4) {
-    grid-column: 6 / 7;
-    grid-row: 3 / 4;
-}
-
-
-/* PHOTO 3 */
-
-.bloc-container div:nth-child(5) {
-    grid-column: 6 / 7;
-    grid-row: 4 / 5;
-}
-
-main div img {
-    width: 100%;
-    height: 100%;
+@media screen and (min-width: 741px) {
+    .bloc-container {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        height: 93vh;
+    }
+    .bloc-container img {
+        object-fit: cover;
+    }
+    /* PORTRAIT */
+    .bloc-container div:nth-child(1) {
+        grid-column: 1 / 4;
+        grid-row: 1 / 5;
+    }
+    /* TEXTE */
+    .bloc-container div:nth-child(2) {
+        grid-column: 4 / 7;
+        grid-row: 1 / 3;
+        background-color: black;
+        text-align: justify;
+        writing-mode: horizontal-tb;
+        color: white;
+        font-size: x-large;
+        line-height: 5vh;
+        text-overflow: ellipsis;
+        padding: 11% 4% 4% 4%;
+    }
+    /* PHOTO 1 */
+    .bloc-container div:nth-child(3) {
+        grid-column: 4 / 6;
+        grid-row: 3 / 5;
+    }
+    /* PHOTO 2 */
+    .bloc-container div:nth-child(4) {
+        grid-column: 6 / 7;
+        grid-row: 3 / 4;
+    }
+    /* PHOTO 3 */
+    .bloc-container div:nth-child(5) {
+        grid-column: 6 / 7;
+        grid-row: 4 / 5;
+    }
+    main div img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 @media screen and (min-width: 200px) and (max-width: 740px) {
     .bloc-container {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    .text {
+        padding-top: 100px;
+        background-color: black;
+        text-align: justify;
+        writing-mode: horizontal-tb;
+        padding: 2% 4% 2% 4%;
     }
     p {
         color: white;
-        font-size: 0.8em;
+        font-size: 1.1em;
         text-align: justify;
         line-height: 3vh;
-        padding: 3%;
+    }
+    main div img {
+        width: 100%;
+        height: 100%;
     }
 }
