--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 .topMain {
     display: flex;
     flex-direction: column;
-    border: solid 1px red;
 }
 
 main img {
@@ -15,27 +14,24 @@ main img {
 
 
 #text {
+    font-family: 'Nothing You Could Do', cursive;
     color: white;
     padding: 1rem;
-    background-color: rgb(80, 80, 80);
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 1.2rem;
+    text-align: center;
+    background-color:#4b5758;
+    font-size: 2em;
 }
 
 .picturesGrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    order: solid 1px green;
     width: 100%;
 }
 
-.bottomPicture {
-
-    border: solid 1px yellow;
-
-}
-
-a{
-    text-decoration:none;
-    color: white;
+@media screen and (min-width: 360px) and (max-width: 740px) {
+  .picturesGrid{
+      display: grid;
+      text-align: center;
+      grid-template-columns: 1fr;
+  }
 }
