--- a/style.css
+++ b/style.css
@@ -1,37 +1,36 @@
-   body {
-    font-family: 'Ropa Sans', sans-serif;
+body {
+  font-family: "Ropa Sans", sans-serif;
 }
 
-    /*_________________Main_____________________*/
+/*_________________Main_____________________*/
 .topMain {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 main img {
-    width: 100%;
+  width: 100%;
 }
 
-
 #text {
-    font-family: 'Nothing You Could Do', cursive;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-    background-color:#4b5758;
-    font-size: 2em;
+  font-family: "Nothing You Could Do", cursive;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+  background-color: #4b5758;
+  font-size: 2em;
 }
 
 .picturesGrid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 100%;
 }
 
 @media screen and (min-width: 360px) and (max-width: 740px) {
-  .picturesGrid{
-      display: grid;
-      text-align: center;
-      grid-template-columns: 1fr;
+  .picturesGrid {
+    display: grid;
+    text-align: center;
+    grid-template-columns: 1fr;
   }
 }
