--- a/header.css
+++ b/header.css
@@ -1,5 +1,5 @@
 /* header */
-
+  
 .header {
   position: fixed;
   width: 100%;
@@ -15,7 +15,7 @@
 }
 
 .header li a {
-  font-family: "Ropa Sans", sans-serif;
+  font-family: 'Ropa Sans', sans-serif;
   font-size: 1.5em;
   text-transform: uppercase;
   display: block;
@@ -33,7 +33,7 @@
 .header .menu {
   clear: both;
   max-height: 0;
-  transition: max-height 0.2s ease-out;
+  transition: max-height .2s ease-out;
   margin-top: 0.7em;
 }
 /* menu icon */
@@ -52,18 +52,18 @@
   display: block;
   height: 2px;
   position: relative;
-  transition: background 0.2s ease-out;
+  transition: background .2s ease-out;
   width: 18px;
 }
 
 .header .menu-icon .navicon:before,
 .header .menu-icon .navicon:after {
   background: #fff;
-  content: "";
+  content: '';
   display: block;
   height: 100%;
   position: absolute;
-  transition: all 0.2s ease-out;
+  transition: all .2s ease-out;
   width: 100%;
 }
 
@@ -80,89 +80,47 @@
   display: none;
 }
 
-.header .menu-btn:checked ~ .menu {
+.header .menu-btn:checked~.menu {
   max-height: 240px;
 }
 
-.header .menu-btn:checked ~ .menu-icon .navicon {
+.header .menu-btn:checked~.menu-icon .navicon {
   background: transparent;
 }
 
-.header .menu-btn:checked ~ .menu-icon .navicon:before {
+.header .menu-btn:checked~.menu-icon .navicon:before {
   transform: rotate(-45deg);
 }
 
-.header .menu-btn:checked ~ .menu-icon .navicon:after {
+.header .menu-btn:checked~.menu-icon .navicon:after {
   transform: rotate(45deg);
 }
 
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
   top: 0;
 }
 /*------------- Quand l'écran est au dessus de 768px----------------*/
 
 @media (min-width: 48em) {
   .header li {
-    float: right;
+      float: right;
   }
   .header li a {
-    padding: 20px 30px;
+      padding: 20px 30px;
   }
   .header .a_current {
-    font-size: 2em;
+      font-size: 2em;
   }
   .header .menu {
-    clear: none;
-    float: left;
-    max-height: none;
-    display: flex;
-    align-items: center;
+      clear: none;
+      float: left;
+      max-height: none;
+      display: flex;
+      align-items: center;
   }
   .header .menu-icon {
-      cursor: pointer;
-      float: right;
-      padding: 28px 20px;
-      position: relative;
-      user-select: none;
-      border: solid 1px rgb(72, 255, 0);
-  }
-  
-  .header .menu-icon .navicon {
-      background: #fff;
-      display: block;
-      height: 2px;
-      position: relative;
-      transition: background .2s ease-out;
-      width: 18px;
-  }
-  
-  .header .menu-icon .navicon:before,
-  .header .menu-icon .navicon:after {
-      background: #fff;
-      content: '';
-      display: block;
-      height: 100%;
-      position: absolute;
-      transition: all .2s ease-out;
-      width: 100%;
-  }
-  
-  .header .menu-icon .navicon:before {
-      top: 5px;
-  }
-  
-  .header .menu-icon .navicon:after {
-      top: -5px;
-  }
-  /* menu btn */
-  
-  .header .menu-btn {
       display: none;
-  }
-  
-  .header .menu-btn:checked~.menu {
-      max-height: 240px;
   }
 }
 /*------------- Quand l'écran est en dessous de 768px----------------*/
@@ -170,95 +128,18 @@
 @media (max-width: 48em) {
   .header li a:hover,
   .header .menu-btn:hover {
-    background-color: black;
+      background-color: black;
   }
   .header .menu {
-    background-color: rgba(0, 0, 0, 0.5);
+      background-color: rgba(0, 0, 0, 0.5);
   }
   .header li a {
-    font-size: 1em;
+      font-size: 1em;
   }
-<<<<<<< HEAD
   .header .a_current {
-    font-weight: bold;
+      font-weight: bold;
   }
   .header .logo {
-    width: 20%;
+      width: 20%;
   }
 }
-=======
-  /*------------- Quand l'écran est au dessus de 768px----------------*/
-  
-  @media (min-width: 48em) {
-<<<<<<< HEAD
-      .header li {
-          float: right;
-      }
-      .header li a {
-          padding: 20px 30px;
-      }
-      .header .a_current {
-          font-size: 2em;
-      }
-      .header .menu {
-          clear: none;
-          float: left;
-          max-height: none;
-          display: flex;
-          align-items: center;
-      }
-      .header .menu-icon {
-          display: none;
-      }
-  }
-  /*------------- Quand l'écran est en dessous de 768px----------------*/
-  
-=======
-    .header li {
-      float: right;
-    }
-    
-    .header li a {
-      padding: 20px 30px;
-      
-    }
-
-    .header .a_current {
-      font-size: 2em;
-   }
-
-    .header .menu {
-      clear: none;
-      float: left;
-      max-height: none;
-      display: flex;
-      align-items: center;
-    }
-
-    .header .menu-icon {
-      display: none;
-    }
-  }
-
-/*------------- Quand l'écran est en dessous de 768px----------------*/
-
->>>>>>> eb8dfa56b1dd1672aa3933c80b7a08438de4fcb5
-  @media (max-width: 48em) {
-      .header li a:hover,
-      .header .menu-btn:hover {
-          background-color: black;
-      }
-      .header .menu {
-          background-color: rgba(0, 0, 0, 0.5);
-      }
-      .header li a {
-          font-size: 1em;
-      }
-      .header .a_current {
-          font-weight: bold;
-      }
-      .header .logo {
-          width: 20%;
-      }
-  }
->>>>>>> 695b27edabe02d0f0dc97daf95371873f7079889
