Modification index.html/style.css et header.css modification main.jpg picture 1 et 2

--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
-   body {
+body {
     font-family: 'Ropa Sans', sans-serif;
 }
 
     /*_________________Main_____________________*/
-.topMain {
-    display: flex;
-    flex-direction: column;
+
+main{
+    padding-bottom: 7vh;
 }
 
 main img {
     width: 100%;
 }
 
+.topMain {
+    display: flex;
+}
+
+main p {
+
+}
 
 #text {
     font-family: 'Nothing You Could Do', cursive;
